modules/gdscript/tests/scripts/parser/errors/brace_syntax.gd
func test() {
	print("Hello world!");
}
